Fix contirbutor-list links, spacing, and small screens for institutions landing page

--- a/app/components/node-blurb/styles.scss
+++ b/app/components/node-blurb/styles.scss
@@ -34,6 +34,5 @@
 
     &__authors {
         font-weight: 500;
-        color: $color-text-blue-dark;
     }
 }
